# ironclad

./: .dockerignore  .export-source  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.dev.dockerignore  LICENSE  NOTICE  README.md  SETUP.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  clean-room.yml  mirror-to-dev.yml  publish.yml  release-close.yml
ack/: README.md  __init__.py  authz.py  case_spec.py  catalogue.py  constrained_emission.py  doctor.py  failure_class.py  gate.py  generator.py  hooks.py  i18n.py  injection.py  lessons.py  loop_profile.py  playbook.py  process.py  prompt.py  promptgen.py  quality.py  registry.py  sdk.py  skillgen.py  strategy.py  tooling_envelope.py  tooling_envelope_vectors.json  validated_emit.py  verify.py
ack/ace/: __init__.py  constraint_conflict.py  constraint_types.py  curator.py  devtraj.py  evaluation.py  fork.py  fork_envelope.py  generator.py  grow.py  offline.py  online.py  playbook.py  reflector.py  robust.py
ack/devprocess/: __init__.py  api.py
ack/egress/: __init__.py  deps.py  known_egress.py  rust_deps.py  rust_known_egress.py  rust_scan.py  staticscan.py
ack/lodestar/: __init__.py  doctor_checks.py  spec.py  tracking.py
ack/templates/: conftest.py
ack/tests/: conftest.py  design_test_support.py  sandbox_test_shim.py  test_ace_curator.py  test_ace_devbullet.py  test_ace_devproof.py  test_ace_devtraj.py  test_ace_devwire.py  test_ace_evaluation.py  (+284 more)
docs/: backup-restore.md  code-agents.md  command-ergonomics.md  config-runtime.md  dev-environment.md  dgx-spark.md  docs-guide.md  lesson-api.md  plugin-api.md  project-isolation.md  prompt-packaging.md  roadmap.md  scheduler.md  security.md  self-maintenance.md  setup-types.md  skill-packaging.md  state-and-initiative.md  state-and-vorhaben.md  status.md  test-report.md  web-search.md
engine/: README.md  agent_env.py  alerting.py  app.py  audit_ledger.py  cli.py  client.py  command_spec.py  commands.py  config_schema.py  dispatch.py  egress_runner.py  forge_adapters.py  forge_native.py  gx10.py  lesson_store.py  lifecycle_projector.py  memory.py  memory_mcp.py  messages.py  notify.py  playbook_store.py  proc_tree.py  project_context.py  project_overlay.py  project_registry.py  project_switch.py  providers.py  router.py  sandbox.py  security.py  server.py  telemetry.py  tooling_envelope_runtime.py  tui.py  warm.py  websearch.py  websearch_adapters.py  websearch_brave.py  workers.py
examples/example-plugin/: README.md  pyproject.toml
examples/example-plugin/ironclad_example_plugin/: __init__.py
examples/example-plugin/ironclad_example_plugin/skills/: __init__.py  reverse.py
examples/example-plugin/ironclad_example_plugin/tests/: __init__.py  test_reverse.py
install/: README.md  ironclad-commands.ps1  ironclad-doctor.ps1  ironclad-doctor.sh  ironclad-install.ps1  ironclad-install.sh  ironclad.ps1  ironclad.sh
memory-service/: Dockerfile  app.py  curate.py  reflect_policy.py  scope_guard.py
scripts/: backup.sh  backup_retention.py  prune_runs.py  restore.sh  scheduler.jobs.example.json  scheduler.py  spark-bootstrap.sh
skills/: README.md
(+285 files in other folders)
